--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,13 @@
 
   /* Color of the border around items */
   --border-color: rgba(255, 255, 255, 0.5);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 /* --- Don't need to modify below here --- */
